# plasmAI_MLP_transfer

./: .gitignore  BASIC_NEURAL_NETWORK_V1.py  README.md  basic_neural_network_v2.py  config.yaml  data_loader.py  data_split_outer.m  dataset_class_V2.py  dataset_class_V3_minmax.py  error_functions_tried.txt  experiments.py  file_with_optimization.py  loss.py  manual_optimization.py  merged_data_1-8719.csv  model.py  optimization_utility.py  pyproject.toml  r_squared_calc.m  stats_min_max.json  test.py  test_data_no_head.csv  test_data_no_head_outer_corner.csv  test_data_no_head_outer_corner_Ar.csv  testing.py  testing_v2.py  train.py  train_data_no_head.csv  train_data_no_head_outer_corner.csv  train_data_no_head_outer_corner_O2.csv  transfer_learning_tests.py  utilities.py  utilities_for_tl.py  utils.py
data/: test_data_no_head_outer_corner_O2.csv  train_data_no_head_outer_corner_O2.csv
matlab codes/: data_split_center.m  r_squared_calc.m
optuna_results - trials(v02 physics based)/: optuna_resultsHUBER.json  optuna_resultsMSE_trial2.json  optuna_results_mse_r2.json  optuna_results_weighted_mse_lowlr.json  optuna_results_withMSE.json  report_optimization_python.docx  unscaled_predictions1_O2_NO_OPTIM.csv  unscaled_predictions1_O2_TUNING.csv  unscaled_predictions1_O2_weighted_mse.csv  unscaled_predictions1_O2_weighted_mse_min_max.csv
test_with_outputs_randomized_not1to10_oxygen(v02 physics based)/: column_stats02_rand.json  numbers_corresponding.txt  optuna_results_weighted_mse_rand_outputs.json  test_data_no_head_outer_corner_rand_O2.csv
(+28 files in other folders)
